Remove references to Okta CLI in readme.md. Add setup instructions for Integrator accounts.

--- a/.okta.env
+++ b/.okta.env
@@ -1,2 +1,2 @@
-OKTA_OAUTH2_ISSUER="${CLI_OKTA_ISSUER}"
-OKTA_OAUTH2_CLIENT_ID="${CLI_OKTA_CLIENT_ID}"
+OKTA_OAUTH2_ISSUER=https://dev-93948303.okta.com/oauth2/default
+OKTA_OAUTH2_CLIENT_ID=0oaqnj00x4R7waJBD5d7
