--- a/.okta.env
+++ b/.okta.env
@@ -1,2 +1,2 @@
-OKTA_OAUTH2_ISSUER="${CLI_OKTA_ISSUER}"
-OKTA_OAUTH2_CLIENT_ID="${CLI_OKTA_CLIENT_ID}"
+OKTA_OAUTH2_ISSUER=https://dev-13333337.okta.com/oauth2/default
+OKTA_OAUTH2_CLIENT_ID=myClientId
